salesforce-composite/3.0/modules/ROOT/pages/salesforce-composite-connector-reference.adoc
= Salesforce Composite Connector 3.0 Reference 
:page-aliases: connectors::salesforce/salesforce-composite-connector-reference.adoc



== Configurations
---
[[composite-config]]
=== Default Configuration

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<composite-config_config-with-oauth, OAuth v2.0>>
* <<composite-config_oauth-client-credentials, OAuth Client Credentials>>
* <<composite-config_oauth-jwt, OAuth JWT>>
* <<composite-config_oauth-saml, OAuth SAML>>
* <<composite-config_oauth-user-pass, OAuth Username Password>>
* <<composite-config_token-connection, Token Connection>>
| The connection types to provide to this configuration. | | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

== Connection Types

[[composite-config_config-with-oauth]]
=== OAuth v2.0

include::connectors::partial$oauth2-description.adoc[]

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| TLS configuration a| <<tls-configuration>> |  Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol, then, at a minimum, the user must configure the key store in the `tls:context` child element of the `listener-config`.  |  |
| Host a| String |  Hostname of the proxy. Required if a proxy is used. If this property is not set, then no proxy is used. |  |
| Port a| Number |  Port of the proxy. If the Host is set, then this property is required and the value cannot be a negative number. |  |
| Username a| String |  Username used to authenticate against the proxy. If this property is not set, then no authentication is used against the proxy. |  |
| Password a| String |  Password used to authenticate against the proxy. |  |
| Response timeout a| Number |  Wait time until a response is received. This attribute works in tandem with Response Timeout Unit. Values less than one millisecond are converted to `0`. |  5 |
| Response timeout unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use for the Response Timeout parameter. |  SECONDS |
| Connection Timeout a| Number |  The socket connection timeout value. This attribute works in tandem with Connection Timeout Time Unit. | 30 |
| Connection Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the Connection Timeout. |  SECONDS |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Consumer Key a| String |  The OAuth consumerKey as registered with the service provider. |  | *x*
| Consumer Secret a| String |  The OAuth consumerSecret as registered with the service provider. |  | *x*
| Authorization Url a| String |  The service provider's authorization endpoint URL. The default is `+https://login.salesforce.com/services/oauth2/authorize+`.  |   |
| Access Token Url a| String |  The service provider's accessToken endpoint URL. The default is `+https://login.salesforce.com/services/oauth2/token+`.  |   |
| Scopes a| String |  The OAuth scopes to request during the dance. If not provided, it defaults to the scopes provided in the annotation. |  |
| Resource Owner Id a| String |  The resource owner ID that each component uses if it is not otherwise referenced. |  |
| Before a| String |  The name of a flow to execute immediately before starting the OAuth dance. |  |
| After a| String |  The name of a flow to execute immediately after an accessToken is received. |  |
| Listener Config a| String |  A reference to a `<http:listener-config />` to use to create the listener that receives the access token callback endpoint. |  | *x*
| Callback Path a| String |  The path of the access token callback endpoint. |  | *x*
| Authorize Path a| String |  The path of the local HTTP endpoint that triggers the OAuth dance. |  | *x*
| External Callback Url a| String |  If the callback endpoint is behind a proxy or accessed through a non direct URL, use this parameter to tell the OAuth provider the URL to use to access the callback. |  |
| Object Store a| String |  A reference to the object store to use to store each resource owner ID's data. If an object store is not specified, Mule automatically provisions the default object store. |  |
|===

[[composite-config_oauth-client-credentials]]
=== OAuth Client Credentials

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| TLS configuration a| <<tls-configuration>> |  Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol, then, at a minimum, the user must configure the key store in the `tls:context` child element of the `listener-config`.  |  |
| Host a| String |  Hostname of the proxy. Required if a proxy is used. If this property is not set, then no proxy is used. |  |
| Port a| Number |  Port of the proxy. If the Host is set, then this property is required and the value cannot be a negative number. |  |
| Username a| String |  Username used to authenticate against the proxy. If this property is not set, then no authentication is used against the proxy. |  |
| Password a| String |  Password used to authenticate against the proxy. |  |
| Response timeout a| Number |  Wait time until a response is received. This attribute works in tandem with Response Timeout Unit. Values less than one millisecond are converted to `0`. |  5 |
| Response timeout unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use for the Response Timeout parameter. |  SECONDS |
| Connection Timeout a| Number |  The socket connection timeout value. This attribute works in tandem with Connection Timeout Time Unit. | 30 |
| Connection Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the Connection Timeout. |  SECONDS |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Client Id a| String |  The OAuth client ID as registered with the service provider. |  | *x*
| Client Secret a| String |  The OAuth client secret as registered with the service provider. |  | *x*
| Token Url a| String |  The service provider's token endpoint URL. The default is `+https://login.salesforce.com/services/oauth2/token+`.  |   |
| Scopes a| String |  The OAuth scopes to request during the dance. If not provided, it defaults to the scopes provided in the annotation. |  |
| Object Store a| String |  A reference to the object store to use to store each resource owner ID's data. If an object store is not specified, Mule automatically provisions the default object store. |  |
|===

[[composite-config_oauth-jwt]]
=== OAuth JWT


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| TLS configuration a| <<tls-configuration>> |  Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol, then, at a minimum, the user must configure the key store in the `tls:context` child element of the `listener-config`.  |  |
| Host a| String |  Hostname of the proxy. Required if a proxy is used. If this property is not set, then no proxy is used. |  |
| Port a| Number |  Port of the proxy. If the Host is set, then this property is required and the value cannot be a negative number. |  |
| Username a| String | Username used to authenticate against the proxy. If this property is not set, then no authentication is used against the proxy. |  |
| Password a| String |  Password used to authenticate against the proxy. |  |
| Response timeout a| Number |  Wait time until a response is received. This attribute works in tandem with Response Timeout Unit. Values less than one millisecond are converted to `0`. |  5 |
| Response timeout unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use for the Response Timeout parameter. |  SECONDS |
| Connection Timeout a| Number |  The socket connection timeout value. This attribute works in tandem with Connection Timeout Time Unit. | 30 |
| Connection Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Connection Timeout. |  SECONDS |
| Consumer Key a| String |  Consumer key for the Salesforce-connected app. |  | *x*
| Key Store a| String |  Path to the key store used to sign data during authentication. |  | *x*
| Store Password a| String |  Password of the key store. |  | *x*
| Certificate Alias a| String |  Alias of the certificate. |  |
| Principal a| String |  Username of the Salesforce user on whose behalf to take action. |  | *x*
| Token Endpoint a| String a| URL pointing to the server responsible for providing the authentication token. The default is `+https://login.salesforce.com/services/oauth2/token+`.

If implementation is for a community, `+https://acme.force.com/customers/services/oauth2/token+`, where `acme.force.com/customers` is your community URL.  |  |
| Audience Url a| String a| The audience identifies the authorization server as an intended audience. The authorization server must verify that it is an intended audience for the token.

Use the authorization server's URL for the audience value: `+https://login.salesforce.com+`. For testing, use: `+https://test.salesforce.com+`. For a community implementation, use: `+https://community.force.com/customers+`. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

[[composite-config_oauth-saml]]
=== OAuth SAML


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| TLS configuration a| <<tls-configuration>> |  Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol, then, at a minimum, the user must configure the key store in the `tls:context` child element of the `listener-config`.  |  |
| Host a| String |  Hostname of the proxy. Required if a proxy is used. If this property is not set, then no proxy is used. |  |
| Port a| Number |  Port of the proxy. If the Host is set, then this property is required and the value cannot be a negative number. |  |
| Username a| String |  Username used to authenticate against the proxy. If this property is not set then no authentication is used against the proxy. |  |
| Password a| String |  Password used to authenticate against the proxy. |  |
| Response timeout a| Number |  Wait time until a response is received. This attribute works in tandem with Response Timeout Unit. Values less than one millisecond are converted to `0`. |  5 |
| Response timeout unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use for the Response Timeout parameter. |  SECONDS |
| Connection Timeout a| Number |  The socket connection timeout value. This attribute works in tandem with Connection Timeout Time Unit. | 30 |
| Connection Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Connection Timeout. |  SECONDS |
| Consumer Key a| String |  Consumer key for the Salesforce-connected app. |  | *x*
| Key Store a| String |  Path to the key store used to sign data during authentication. |  | *x*
| Store Password a| String |  Password of the key store. |  | *x*
| Certificate Alias a| String |  Alias of the certificate. |  |
| Principal a| String |  Username of the Salesforce user on whose behalf to take action. |  | *x*
| Token Endpoint a| String | URL pointing to the server responsible for providing the authentication token. The default is `+https://login.salesforce.com/services/oauth2/token+`.

If implementation is for a community, `+https://acme.force.com/customers/services/oauth2/token+`, where `acme.force.com/customers` is your community URL.  |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment will fail if the test doesn't pass after exhausting the associated reconnection strategy |  |
|===

[[composite-config_oauth-user-pass]]
=== OAuth Username Password

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| TLS configuration a| <<tls-configuration>> |  Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol, then, at a minimum, the user must configure the key store in the `tls:context` child element of the `listener-config`.  | HTTP |
| Host a| String |  Hostname of the proxy. Required if a proxy is used. If this property is not set, then no proxy is used. |  |
| Port a| Number | Port of the proxy. If the Host is set, then this property is required and the value cannot be a negative number. |  |
| Username a| String |  Username used to authenticate against the proxy. If this property is not set, then no authentication is used against the proxy. |  |
| Password a| String |  Password used to authenticate against the proxy. |  |
| Response Timeout a| Number |  Wait time until a response is received. This attribute works in tandem with Time Unit. Values less than one millisecond are converted to `0`. |  5 |
| Time unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use for the Response Timeout parameter. |  SECONDS |

| Connection Timeout a| Number |  The socket connection timeout value. This attribute works in tandem with Connection Timeout Time Unit. | 30 |
| Connection Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Connection Timeout. |  SECONDS | 
| Consumer Key a| String |  Consumer key for Salesforce-connected app. |  | x
| Consumer Secret a| String |  Your application's client secret (consumer secret in Remote Access Detail). |  | x
| Username a| String |  Username used to initialize the session. |  | x
| Password a| String |  Password used to authenticate the user |  | x
| Security Token a| String |  User's security token. It can be omitted if your IP has been allowlisted on Salesforce. |  |
| Token Endpoint a| String |  URL pointing to the server responsible for providing the authentication token. The default is `+https://login.salesforce.com/services/oauth2/token+`.

If implementation is for a community, `+https://acme.force.com/customers/services/oauth2/token+`, where `acme.force.com/customers` is your community URL. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

[[composite-config_token-connection]]
=== Token Connection

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Session Id a| String | Session ID. |  | x
| Instance Url a| String | Instance URL. |  | x
| TLS configuration a| <<tls-configuration>> |  Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol, then, at a minimum, the user must configure the key store in the `tls:context` child element of the `listener-config`.  | `HTTP` |
| Host a| String |  Hostname of the proxy. Required if a proxy is used. If this property is not set, then no proxy is used. |  |
| Port a| Number | Port of the proxy. If *Host* is set, then this property is required and the value cannot be a negative number. |  |
| Username a| String |  Username used to authenticate against the proxy. If this property is not set, then no authentication is used against the proxy. |  |
| Password a| String |  Password used to authenticate against the proxy. |  |
| Response timeout a| Number |  How long Mule waits for a response to complete before the request times out. | `5`|
| Response timeout unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response timeout* field. |  `SECONDS` |
| Connection Timeout a| Number | Socket connection timeout value. | 30 |
| Connection Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Connection Timeout* field. |  `SECONDS` |
| Reconnection a| <<Reconnection>> |  Configures a reconnection strategy to use when a connector operation fails to connect to an external server. |  |
|===

== Operations

* <<createSobjectCollections>>
* <<createSobjectTree>>
* <<deleteSobjectCollections>>
* <<executeCompositeBatch>>
* <<executeCompositeGraph>>
* <<executeCompositeRequest>>
* <<getSobjectCollections>>
* <<postCreate>>
* <<postDelete>>
* <<postGetLimits>>
* <<postQuery>>
* <<postQueryAll>>
* <<postRetrieve>>
* <<postSearch>>
* <<postUpdate>>
* <<preCreate>>
* <<preDelete>>
* <<preGetLimits>>
* <<preQuery>>
* <<preQueryAll>>
* <<preRetrieve>>
* <<preSearch>>
* <<preUpdate>>
* <<unauthorize>>
* <<updateSobjectCollections>>
* <<upsertSobjectCollections>>

[[createSobjectCollections]]
=== Create Sobject Collections
`<salesforce-composite:create-sobject-collections>`

Add up to 200 records and return a list of `SaveResult` objects. You can roll back the entire request if an error occurs.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Request Body a| Object |  The request body. |  `#[payload]` |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Array of Object
| Attributes Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[createSobjectTree]]
=== Create sObject Tree
`<salesforce-composite:create-sobject-tree>`

Sends a list of sObject trees to Salesforce to be created.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| SObject Root Type a| String |  The sObject type of the root of the trees. |  | x
| SObject Tree a| Array of Object |  A list of maps containing representing the list of trees that need to be created. |  `#[payload]` |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Object
| Attributes Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[deleteSobjectCollections]]
=== Delete sObject Collections
`<salesforce-composite:delete-sobject-collections>`

Delete up to 200 records and return a list of `DeleteResult` objects. You can roll back the entire request if an error occurs.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Ids a| Array of String |  The IDs of the entities to be deleted. |  | x
| All Or None a| Boolean |  Indicates whether to roll back the entire request when the deletion of any object fails. |  false |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Array of Object
| Attributes Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[executeCompositeBatch]]
=== Execute Composite Batch
`<salesforce-composite:execute-composite-batch>`

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Sub Requests a| Array of Object |  The list of subrequests to execute. |  `#[payload]` |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String | Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Object
| Attributes Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[executeCompositeGraph]]
=== Execute Composite Graph
`<salesforce-composite:execute-composite-graph>`

Performs composite requests by executing a series of REST API requests in a single call.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Graphs a| Array of Object |  List of graphs to execute |  `#[payload]` |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Object
| Attributes Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:VALIDATION
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:INVALID_SESSION

[[executeCompositeRequest]]
=== Execute Composite Request
`<salesforce-composite:execute-composite-request>`

Execute a series of REST API requests in a single call. You can use the output of one request as the input to a subsequent request. The response bodies and HTTP statuses of the requests are returned in a single response body. The entire request counts as a single call toward your API limits.

[NOTE]
You can add `httpHeaders` within `compositeRequest`, for example: `"httpHeaders" : { "X-REQUEST-ID" : "ReferenceId" }`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use | | x
| Request Body a| Object | Request body |  `#[payload]` |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Object
| Attributes Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[getSobjectCollections]]
=== Get sObject Collections
`<salesforce-composite:get-sobject-collections>`

Retrieve one or more records of the same object type.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  The sObject type of the root of the trees. |  | x
| List of ids a| Array of String |  A list of one or more IDs of the objects to return. All IDs must belong to the same object type. |  | x
| List of fields a| Array of String |  A list of fields to include in the response. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Array of Object
| Attributes Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[postCreate]]
=== Post Create
`<salesforce-composite:post-create>`

Provide metadata for the result of a create. This operation takes as input one record from the result returned by `executeCompositeBatch(String, java.util.List)`, which belongs to a create subrequest generated by `preCreate(String, java.util.Map)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Create Result a| Object |  The result of the create subrequest. |  `#[payload]` |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[postDelete]]
=== Post Delete
`<salesforce-composite:post-delete>`

Provide metadata for the result of a delete. This operation takes as input one record from the result returned by `executeCompositeBatch(String, java.util.List)`, which belongs to a delete subrequest generated by `preDelete(String, java.util.Map)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Delete Result a| Object |  The result of the delete subrequest. |  `#[payload]` |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[postGetLimits]]
=== Post Get Limits
`<salesforce-composite:post-get-limits>`

Provide metadata for the result of a get limits request. This operation takes as input one record from the result returned by `executeCompositeBatch(String, java.util.List)`, which belongs to a get limits subrequest generated by `preGetLimits()`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Get Limits Result a| Object |  The result of the create subrequest. |  `#[payload]` |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[postQuery]]
=== Post Query
`<salesforce-composite:post-query>`

Provide metadata for the result of a query. This operation takes as input one record from the result returned by `executeCompositeBatch(String, java.util.List)`, which belongs to a query subrequest generated by `preQuery(String, java.util.Map)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Query a| String |  The query that was used in the `preQuery` operation - needed for metadata. |  | x
| Query Result a| Object |  The result of the query subrequest. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* non-repeatable-iterable |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior.  |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Array of Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[postQueryAll]]
=== Post Query All
`<salesforce-composite:post-query-all>`

Provide metadata for the result of a query. This operation takes as input one record from the result returned by `executeCompositeBatch(String, java.util.List)`, which belongs to a query subrequest generated by `preQueryAll(String, java.util.Map)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Query Result a| Object |  The result of the create subrequest. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* non-repeatable-iterable |  Configure how Mule processes streams with streaming strategies. Repeatable streams are the default behavior.  |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Array of Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[postRetrieve]]
=== Post Retrieve
`<salesforce-composite:post-retrieve>`

Provide metadata for the result of a retrieve. This operation takes as input one record from the result returned by `executeCompositeBatch(String, java.util.List)`, which belongs to a retrieve subrequest generated by `preRetrieve(String, java.util.Map)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  The type of the retrieved object - used for metadata. |  | x
| Retrieve Data a| Object |  The result of the retrieve subrequest. |  `#[payload]` |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[postSearch]]
=== Post Search
`<salesforce-composite:post-search>`

Provide metadata for the result of a search. This operation takes as input one record from the result returned by `executeCompositeBatch(String, java.util.List)`, which belongs to a search subrequest generated by `preSearch(String, java.util.Map)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Search Result a| Object |  The result of the search subrequest. |  `#[payload]` |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Array of Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[postUpdate]]
=== Post Update
`<salesforce-composite:post-update>`

Provide metadata for the result of an update. This operation takes as input one record from the result returned by `executeCompositeBatch(String, java.util.List)`, which belongs to an update subrequest generated by `preUpdate(String, java.util.Map)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Update Result a| Object |  The result of the update subrequest. |  `#[payload]` |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[preCreate]]
=== Pre Create
`<salesforce-composite:pre-create>`

Provide metadata for a create based on an object that is created and generates a subrequest for execution by `executeCompositeBatch(String, java.util.List)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  Type of object to create. |  | x
| S Object a| Object |  Object to create as a map that sticks to metadata for a selected type. |  `#[payload]` |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[preDelete]]
=== Pre Delete
`<salesforce-composite:pre-delete>`

Provide metadata for a delete based on an object that is deleted and generates a subrequest for execution by `executeCompositeBatch(String, java.util.List)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  Type of object that is deleted. |  | x
| Id a| String |  The ID of the object that is deleted. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[preGetLimits]]
=== Pre Get Limits
`<salesforce-composite:pre-get-limits>`

Provide metadata for getLimits and generate a subrequest for execution by `executeCompositeBatch(String, java.util.List)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[preQuery]]
=== Pre Query
`<salesforce-composite:pre-query>`

Provides metadata for a query based on an object that is queried, and generates a subrequest for execution by `executeCompositeBatch(String, java.util.List)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Query a| String |  The query that is run in `executeCompositeBatch`.|  | x
| Parameters a| Object |  The parameters to use in a parameterized query. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[preQueryAll]]
=== Pre Query All
`<salesforce-composite:pre-query-all>`

Provide metadata for a query based on an object that is queried and generates a subrequest for execution by `executeCompositeBatch(String, java.util.List)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Query a| String |  The query that is run in `executeCompositeBatch`. |  | x
| Parameters a| Object |  The parameters to use in a parameterized query. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[preRetrieve]]
=== Pre Retrieve
`<salesforce-composite:pre-retrieve>`

Provide metadata for a retrieve based on an object that is retrieved and generates a subrequest for execution by `executeCompositeBatch(String, java.util.List)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Retrieve Data a| Object |  Object to retrieve as a map that sticks to metadata for a selected type. |  `#[payload]` |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[preSearch]]
=== Pre Search
`<salesforce-composite:pre-search>`

Provide the user a way to input a SOSL String and generate a subrequest for execution by `executeCompositeBatch(java.util.List)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Search a| String |  The SOSL string that is run in executeCompositeBatch. |  `#[payload]` |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[preUpdate]]
=== Pre Update
`<salesforce-composite:pre-update>`

Provide metadata for a create based on an object that is created and generates a subrequest for execution by `executeCompositeBatch(String, java.util.List)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  Type of object that is created. |  | x
| SObject a| Object |  Object to create as a map that sticks to metadata for a selected type. |  `#[payload]`. |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[unauthorize]]
=== Unauthorize
`<salesforce-composite:unauthorize>`

Deletes all the access token information of a given resource owner ID so that it's impossible to execute any operation for that user without repeating the authorization dance.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Resource Owner Id a| String |  The ID of the resource owner for whom to invalidate access |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
|===

==== For Configurations

* <<composite-config>>

[[updateSobjectCollections]]
=== Update sObject Collections
`<salesforce-composite:update-sobject-collections>`

Update up to 200 records and return a list of `SaveResult` objects. You can roll back the entire request if an error occurs.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Request Body a| Object |  The request body. |  `#[payload]` |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Array of Object
| Attributes Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[upsertSobjectCollections]]
=== Upsert sObject Collections
`<salesforce-composite:upsert-sobject-collections>`

Upsert up to 200 records of same type and return a list of `SaveResult` objects. You can roll back the entire request if an error occurs.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  The sObject type. |  | x
| External Field Name a| String |  The name of the external field for this sobject type. |  | x
| Request Body a| Object |  The request body. |  `#[payload]` |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  `#[payload]` |
| Error Mappings a| Array of <<error-mapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
| Type a | Array of Object
| Attributes Type a | Object
|===

==== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

== Types

[[tls-configuration]]
=== TLS Configuration

Configures TLS to provide secure communications for the Mule app.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma separated list that defines the enabled TLS protocols, which must be a subset of the globally enabled TLS protocols. | By default, the globally enabled TLS protocols are used. |
| Enabled Chiper Suites a| String | A comma separated list that defines the enabled TLS cipher suites, which must be a subset of the globally enabled cipher suites. | By default, the globally enabled cipher suites are used. |
| Trust Store Configuration a| <<trust-store-configuration>> | Contains the configuration parameters for the trust store configuration |  |
| Key Store Configuration a| <<key-store-configuration>> | Contains the configuration parameters for the key store configuration |  |
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> |  |  |
|===

[[trust-store-configuration]]
=== Trust Store Configuration

Configures the truststore for TLS.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Defines the location of the trust store to use, which will be resolved relative to the current classpath and file system, if possible. A password is also required. |  |
| Password a| String | The password to access the trust store that is specified in the path. |  |
| Type a| String | The type of store used. |  |
| Algorithm a| String | The algorithm used by the trust store. |  |
| Insecure a| Boolean | If `true`, no certificate validations will be performed, rendering connections vulnerable to attacks. Use at your own risk. |  |
|===

[[key-store-configuration]]
=== Key Store Configuration

Configures the keystore for the TLS protocol. The keystore you generate contains a private key and a public certificate.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Defines the location of the key store to use, which will be resolved relative to the current classpath and file system, if possible. |  |
| Type a| String | The type of store used. |  |
| Alias a| String | Defines the alias of the key to use when the key store contains many private keys. By default, the first key in the file is used. |  |
| Key Password a| String| Defines the password used to protect the private key. |  |
| Password a| String| Defines the password to access the key store that is specified in the path. |  |
| Algorithm a| String | Defines the algorithm used by the key store. |  |
|===

[[standard-revocation-check]]
=== Standard Revocation Check

Configures standard revocation checks for TLS certificates.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean a| Which elements to verify in the certificate chain:

* `true`

Verify only the last element in the certificate chain.

* `false`

Verify all elements in the certificate chain. |  |
| Prefer CRLs a| Boolean a| How to check certificate validity:

* `true`

Check the Certification Revocation List (CRL) for certificate validity.

* `false`

Use the Online Certificate Status Protocol (OCSP) to check certificate validity. |  |
| No Fallback a| Boolean a| Whether to use the secondary method to check certificate validity:

* `true`

Use the method that wasn't specified in the *Prefer CRLs* field (the secondary method) to check certificate validity.

* `false`

Do not use the secondary method to check certificate validity. |  |
| Soft Fail a| Boolean a| What to do if the revocation server can't be reached or is busy:

* `true`

Avoid verification failure.

* `false`

Allow the verification to fail. |  |
|===

[[custom-ocsp-responder]]
=== Custom OCSP Responder

Configures a custom OCSP responder for certification revocation checks.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| URL a| String | The URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response, if present. The certificate must be in the trust store. |  |
|===

[[crl-file]]
=== CRL File

Specifies the location of the certification revocation list (CRL) file.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  |
|===

[[Reconnection]]
=== Reconnection

Configures a reconnection strategy for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

Configures a standard reconnection strategy, which specifies how often to reconnect and how many reconnection attempts the connector source or operation can make.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to reconnect (in milliseconds). | |
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. | |
| Count a| Number | The number of reconnection attempts to make. | |
|===

[[reconnect-forever]]
=== Reconnect Forever

Configures a forever reconnection strategy by which the connector source or operation attempts to reconnect at a specified frequency for as long as the Mule app runs.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. | |
|===

[[ExpirationPolicy]]
=== Expiration Policy

Configures an expiration policy strategy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute. |  |
|===

[[repeatable-in-memory-iterable]]
=== Repeatable In Memory Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of instances that is initially allowed to be kept in memory to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the *Buffer Size Increment* attribute, with an upper limit of `maxInMemorySize`. Default value is 100 instances. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a `STREAM_MAXIMUM_SIZE_EXCEEDED` error is raised when the buffer gets full. Default value is 100 instances. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a `STREAM_MAXIMUM_SIZE_EXCEEDED` error is raised. A value lower than or equal to zero means no limit. |  |
|===

[[repeatable-file-store-iterable]]
=== Repeatable File Store Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Objects a| Number | The maximum amount of instances to keep in memory. If more than that is required, then it will start to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *In Memory Objects* field. |  |
|===

[[error-mapping]]
=== Error Mapping

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT |  |  |
| Target a| String |  |  | x
|===

== See Also

https://help.salesforce.com[Salesforce Help]
